# cpp-gl

./: .gitignore
src/: CMakeLists.txt  engine.cpp  engine.h  main  main.cpp
src/camera/: camera.cpp  camera.h
src/entity/: entity.cpp  entity.h  player.cpp  player.h
src/enum/: result.h
src/event/: key_event_handler.cpp  key_event_handler.h
src/mesh/: mesh.cpp  mesh.h  shaded_mesh.cpp  shaded_mesh.h
src/model/: bound_checker.cpp  bound_checker.h  bound_result.h  bounding_box.h  model.cpp  model.h  model_factory.cpp  model_factory.h
src/object/: object.cpp  object.h
src/render/: render_system.cpp  render_system.h
src/shader/: mesh_shader.cpp  mesh_shader.h  shader.h  shader_registry.cpp  shader_registry.h
src/texture/: texture.cpp  texture.h
src/vector/: vec2d.h
src/world/: world.cpp  world.h
